# electric-miniprogram

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CREDIT_SYSTEM_IMPLEMENTATION.md  DEVELOPER_GUIDE.md  PRODUCT_ORDER_FULFILLMENT_GUIDE.md  USER_INTRODUCTION.md  api.md  build.sh  docker-compose.dev.yaml  docker-compose.preprod.yaml  docker-compose.prod.yaml  frontend.md  haier_api.md  package.json  test.sh  商户管理后端.md
backend/: README.md  check_image_limit.py  check_jionlp.py  check_orders.py  clear_cache.py  db.sqlite3  pyproject.toml
backend/backend/: db.sqlite3  urls.py
backend/catalog/: admin.py  apps.py  media_cleanup.py  models.py  search.py  serializers.py  signals.py  storage.py  urls.py  views.py
backend/common/: __init__.py  address_parser.py  apps.py  audit_logger.py  excel.py  exceptions.py  health.py  logging.py  logging_config.py  monitor_urls.py  pagination.py  permissions.py  responses.py  serializers.py  throttles.py  utils.py
backend/docs/: 01_PROJECT_OVERVIEW.md  02_USERS_MODULE.md  03_CATALOG_MODULE.md  04_ORDERS_MODULE.md  05_INTEGRATIONS_MODULE.md  06_COMMON_MODULE.md  07_API_REFERENCE.md  08_DATABASE_DESIGN.md  09_DEPLOYMENT_GUIDE.md  10_DEVELOPMENT_GUIDE.md  API_QUICK_REFERENCE.md  BACKEND_DETAILED_GUIDE.md  DOCUMENTATION_COMPLETE.md  HAIER_API_INTEGRATION.md  README.md
backend/integrations/: admin.py  apps.py  haierapi.py  models.py  serializers.py  test_ylh_callback.py  urls.py  views.py  wechat.py  ylhapi.py
backend/orders/: admin.py  analytics.py  apps.py  cancel_service.py  models.py  payment_service.py  profit_sharing.py  (+7 more)
(+733 files in other folders)
